--- a/package.json
+++ b/package.json
@@ -11,14 +11,24 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "1.9.5",
     "axios": "^1.6.3",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "1.10.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "prop-types": "15.8.1",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "react-feather": "2.0.10",
+    "react-redux": "8.1.2",
+    "reactstrap": "^9.2.1",
+    "sass-loader": "^13.3.3",
+    "simplebar-react": "3.2.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -30,6 +40,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "sass": "^1.69.6",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
